--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Milkshake",
   "license": "MIT",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
@@ -22,11 +23,14 @@
     "hogan-middleware": "^0.2.2",
     "mongoose": "^4.9.7",
     "morgan": "~1.7.0",
+    "p": "^0.2.0",
     "react": "^15.5.4",
+    "react-addons-transition-group": "^15.5.2",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "superagent": "^3.5.2"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
