--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-addons-transition-group": "^15.5.2",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
+    "react-transition-group": "^1.1.3",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "superagent": "^3.5.2"
