Uploading image setup

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "check out my workspace",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "build": "webpack && nodemon"
   },
   "keywords": [
     "workspace",
@@ -23,7 +24,6 @@
     "hogan-middleware": "^0.2.2",
     "mongoose": "^4.9.7",
     "morgan": "~1.7.0",
-    "p": "^0.2.0",
     "react": "^15.5.4",
     "react-addons-transition-group": "^15.5.2",
     "react-dom": "^15.5.4",
