--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "build": "webpack && nodemon"
+    "build": "NODE_ENV=production webpack"
   },
   "keywords": [
     "workspace",
@@ -15,6 +15,10 @@
   "author": "Milkshake",
   "license": "MIT",
   "dependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "bluebird": "^3.5.0",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
@@ -32,13 +36,7 @@
     "react-transition-group": "^1.1.3",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
-    "superagent": "^3.5.2"
-  },
-  "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
+    "superagent": "^3.5.2",
     "webpack": "^2.5.0"
   }
 }
