--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   "author": "Milkshake",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.58.0",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "bluebird": "^3.5.0",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
