--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-transition-group": "^1.1.3",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
+    "sharp": "^0.18.0",
     "superagent": "^3.5.2",
     "webpack": "^2.5.0"
   }
